

message C2LS_Login
{
	required string user_name = 1;
	required string passwd = 2;	
}


